change base url setting

--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ title: Kramit blog
 email: mike@michaelwhitehouse.com
 description: >- # this means to ignore newlines until "baseurl:"
   This is the personal site of Michael Whitehouse
-baseurl: "" # the subpath of your site, e.g. /blog
+baseurl: "kramit.github.io" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: kramit
 github_username:  kramit
