--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ email: mike@michaelwhitehouse.com
 description: >- # this means to ignore newlines until "baseurl:"
   This is the personal site of Michael Whitehouse
 baseurl: "kramit.github.io" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+url: "kramit.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: kramit
 github_username:  kramit
 youtube_username: lpkramit
