--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 jekyll:
   image: jekyll/jekyll:3.8
-  command: jekyll serve --livereload --drafts --no-watch
+  command: jekyll serve --livereload --drafts
   ports:
     - 4000:4000
     - 35729:35729
